# bitkit-core

./: Cargo.toml  Package.swift  README.md  build_android.sh  build_ios.sh  build_python.sh  jitpack.yml  uniffi.toml  update_package.py
bindings/android/: README.md  bitkitcore.kt  build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/android/lib/: build.gradle.kts
bindings/android/lib/src/main/: AndroidManifest.xml
bindings/android/lib/src/main/kotlin/com/synonym/bitkitcore/: Library.kt  (+1 more)
bindings/ios/: bitkitcore.swift  bitkitcoreFFI.h
bindings/ios/BitkitCore.xcframework/ios-arm64-simulator/Headers/: bitkitcoreFFI.h
bindings/ios/BitkitCore.xcframework/ios-arm64/Headers/: bitkitcoreFFI.h
bindings/python/: README.md  setup.py
bindings/python/bitkitcore/: bitkitcore.py
cargo/: config.toml
example/: main.rs
src/: lib.rs
src/modules/: mod.rs
src/modules/activity/: README.md  errors.rs  implementation.rs  mod.rs  tests.rs  types.rs
src/modules/blocktank/: README.md  api.rs  db.rs  errors.rs  mod.rs  models.rs  tests.rs  types.rs
src/modules/hardware/: README.md  errors.rs  functions-with-trezor.js  implementation.rs  mod.rs  package-lock.json  package.json  types.rs
src/modules/lnurl/: README.md  errors.rs  implementation.rs  mod.rs  types.rs  utils.rs
src/modules/onchain/: README.md  errors.rs  implementation.rs  mod.rs  tests.rs  types.rs
src/modules/scanner/: README.md  errors.rs  implementation.rs  mod.rs  tests.rs  types.rs  utils.rs
src/modules/trezor/: README.md  errors.rs  implementation.rs  mod.rs  tests.rs  types.rs
